Поиск пользователя по ID, форматирование
