# docs/swagger.yaml
@@ -59,33 +59,6 @@ paths:
       summary: Начать отсчет времени по задаче для пользователя
       tags:
       - tasks
-  /users/change:
-    patch:
-      consumes:
-      - application/json
-      description: Изменение данных пользователя
-      parameters:
-      - description: Идентификатор пользователя
-        in: query
-        name: id
-        required: true
-        type: string
-      - description: Изменение данных пользователя
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/model.User'
-      produces:
-      - application/json
-      responses:
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/utils.HTTPError'
-      summary: Изменение данных пользователя
-      tags:
-      - users
   /users/create:
     post:
       consumes:
@@ -112,9 +85,15 @@ paths:
       summary: Создает нового пользователя
       tags:
       - users
-  /users/delete:
+  /users/delete/{id}:
     delete:
       description: Изменение данных пользователя
+      parameters:
+      - description: Идентификатор пользователя
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -125,7 +104,28 @@ paths:
       summary: Удаление пользователя
       tags:
       - users
-  /users/list:
+  /users/find/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Получение данных о пользователе по ID
+      parameters:
+      - description: Идентификатор пользователя
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+      summary: Получение данных о пользователе по ID
+      tags:
+      - users
+  /users/info:
     get:
       description: Получение данных о всех пользователях
       produces:
@@ -138,9 +138,23 @@ paths:
       summary: Получение данных о всех пользователях
       tags:
       - users
-  /users/list/{id}:
-    get:
-      description: Получение данных о пользователе по ID
+  /users/update/{id}:
+    patch:
+      consumes:
+      - application/json
+      description: Изменение данных пользователя
+      parameters:
+      - description: Идентификатор пользователя
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Изменение данных пользователя
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.User'
       produces:
       - application/json
       responses:
@@ -148,7 +162,7 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/utils.HTTPError'
-      summary: Получение данных о пользователе по ID
+      summary: Изменение данных пользователя
       tags:
       - users
 swagger: "2.0"
